--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Hippo Button</title>
     <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
     <button class="button">
-      <svg viewBox="0 0 242 109" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <style type="text/css">
-
-        </style>
+      <svg viewBox="0 0 242 109" xmlns="http://www.w3.org/2000/svg">
         <g class="ears">
           <g class="ear-left">
             <ellipse class="ear-left-outer" transform="matrix(0.9391 -0.3436 0.3436 0.9391 -3.6062 17.8444)" cx="48.5" cy="19.1" rx="11.4" ry="13.8"/>
@@ -25,12 +21,25 @@
           <g class="eye-right">
             <path class="eye-right-outer" d="M174.9,27H186c0-0.3,0-0.7,0-1c0-14.4-11.6-26-26-26c-14.4,0-26,11.6-26,26 c0,0.3,0,0.7,0,1h6.1H174.9z"/>
             <path class="eye-right-inner" d="M175,25c0-11-7.8-20-17.5-20S140,14,140,25c0,0.7,0,1.3,0.1,2h34.8 C175,26.3,175,25.7,175,25z"/>
-            <circle class="eye-right-pupil" cx="158" cy="18" r="5"/>
+            <defs>
+              <clipPath id="eye-right-clip">
+                <path d="M174.9,27H186c0-0.3,0-0.7,0-1c0-14.4-11.6-26-26-26c-14.4,0-26,11.6-26,26 c0,0.3,0,0.7,0,1h6.1H174.9z"/>
+              </clipPath>
+            </defs>
+            <g clipPath="url(#eye-right-clip)">
+              <circle class="eye-right-pupil" cx="158" cy="18" r="5"/>
+            </g>
           </g>
           <g class="eye-left">
             <path class="eye-left-outer" d="M96.9,27h6.1c0-0.3,0-0.7,0-1c0-14.4-11.6-26-26-26C62.6,0,51,11.6,51,26 c0,0.3,0,0.7,0,1h11.1H96.9z"/>
             <path class="eye-left-inner" d="M97,25c0-11-7.8-20-17.5-20S62,14,62,25c0,0.7,0,1.3,0.1,2h34.8C97,26.3,97,25.7,97,25z" />
-            <circle class="eye-left-pupil" cx="80" cy="17.7" r="5"/>
+            <defs>
+              <clipPath id="eye-left-clip">
+                <path d="M96.9,27h6.1c0-0.3,0-0.7,0-1c0-14.4-11.6-26-26-26C62.6,0,51,11.6,51,26 c0,0.3,0,0.7,0,1h11.1H96.9z"/>
+            </defs>
+            <g clip-path="url(#eye-left-clip)">
+              <circle class="eye-left-pupil" cx="80" cy="17.7" r="5"/>
+            </g>
           </g>
         </g>
         <g class="nostrils">
@@ -66,6 +75,7 @@
         </defs>
       </svg>
     </button>
+
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js"></script>
     <script src="./js/app.js"></script>
   </body>
