--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hippo Button</title>
+    <title>Christmas Hack</title>
     <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
