Replace svgs with cat and bauble, and add initial animations

--- a/index.html
+++ b/index.html
@@ -5,77 +5,116 @@
     <link rel="stylesheet" href="./styles/styles.css">
   </head>
   <body>
-    <button class="button">
-      <svg viewBox="0 0 242 109" xmlns="http://www.w3.org/2000/svg">
-        <g class="ears">
-          <g class="ear-left">
-            <ellipse class="ear-left-outer" transform="matrix(0.9391 -0.3436 0.3436 0.9391 -3.6062 17.8444)" cx="48.5" cy="19.1" rx="11.4" ry="13.8"/>
-            <ellipse class="ear-left-inner" transform="matrix(0.9391 -0.3436 0.3436 0.9391 -3.8876 17.4659)" cx="47.3" cy="19.7" rx="7.3" ry="11.2"/>
-          </g>
-          <g class="ear-right">
-            <ellipse class="ear-right-outer" transform="matrix(0.3436 -0.9391 0.9391 0.3436 106.5379 189.869)" cx="189.1" cy="18.7" rx="14.4" ry="11.9"/>
-            <ellipse class="ear-right-inner" transform="matrix(0.3436 -0.9391 0.9391 0.3436 106.8522 191.5127)" cx="190.4" cy="19.3" rx="11.7" ry="7.7"/>
-          </g>
-        </g>
-        <g class="eyes">
-          <g class="eye-right">
-            <path class="eye-right-outer" d="M174.9,27H186c0-0.3,0-0.7,0-1c0-14.4-11.6-26-26-26c-14.4,0-26,11.6-26,26 c0,0.3,0,0.7,0,1h6.1H174.9z"/>
-            <path class="eye-right-inner" d="M175,25c0-11-7.8-20-17.5-20S140,14,140,25c0,0.7,0,1.3,0.1,2h34.8 C175,26.3,175,25.7,175,25z"/>
-            <defs>
-              <clipPath id="eye-right-clip">
-                <path d="M174.9,27H186c0-0.3,0-0.7,0-1c0-14.4-11.6-26-26-26c-14.4,0-26,11.6-26,26 c0,0.3,0,0.7,0,1h6.1H174.9z"/>
-              </clipPath>
-            </defs>
-            <g clipPath="url(#eye-right-clip)">
-              <circle class="eye-right-pupil" cx="158" cy="18" r="5"/>
+    <div class="app">
+      <div class="cat">
+        <div class="cat__paw">
+          <svg viewBox="0 0 180 762" xmlns="http://www.w3.org/2000/svg">
+            <g class="paw">
+              <path class="paw-outline" d="M35 168V761H148.5V168C148.5 168 180 90 178.5 41C177 -8.00001 40.7949 -16.9481 7.99999 41C-16.9738 85.1283 35 168 35 168Z" />
+              <g id="paw-pads">
+                <path class="paw__pad" d="M78.2363 36.8327C81.9718 47.9708 78.032 59.3369 69.4365 62.2197C60.841 65.1024 50.8448 58.4101 47.1093 47.272C43.3738 36.1339 47.3136 24.7677 55.9091 21.885C64.5046 19.0023 74.5008 25.6946 78.2363 36.8327Z" />
+                <path class="paw__pad" d="M124.674 34.8899C123.598 46.5884 115.408 55.399 106.38 54.569C97.3517 53.7389 90.9051 43.5825 91.9807 31.884C93.0563 20.1856 101.247 11.375 110.275 12.205C119.303 13.0351 125.749 23.1915 124.674 34.8899Z" />
+                <path class="paw__pad" d="M110.779 100.777C109.244 117.469 99.3451 130.204 88.6688 129.223C77.9924 128.241 70.5816 113.914 72.1163 97.2226C73.651 80.5311 83.5499 67.7958 94.2263 68.7774C104.903 69.759 112.313 84.0859 110.779 100.777Z" />
+                <path class="paw__pad" d="M166.028 52.3664C162.677 63.6263 152.917 70.6584 144.228 68.0728C135.538 65.4873 131.21 54.2634 134.56 43.0034C137.911 31.7435 147.671 24.7114 156.36 27.297C165.05 29.8825 169.378 41.1064 166.028 52.3664Z" />
+                <path class="paw__pad" d="M92.0942 106.256C98.1236 116.339 96.7037 128.284 88.9228 132.937C81.1419 137.59 69.9465 133.189 63.9171 123.106C57.8878 113.023 59.3076 101.078 67.0885 96.4249C74.8694 91.772 86.0648 96.1735 92.0942 106.256Z" />
+                <path class="paw__pad" d="M118.903 116.376C116.149 127.797 106.771 135.331 97.9578 133.206C89.1445 131.08 84.233 120.099 86.9876 108.678C89.7422 97.258 99.1198 89.7233 107.933 91.849C116.746 93.9748 121.658 104.956 118.903 116.376Z" />
+                <path class="paw__pad" d="M45.2711 65.7248C51.4703 75.7038 50.2527 87.6717 42.5517 92.4557C34.8507 97.2397 23.5824 93.0282 17.3832 83.0492C11.1841 73.0701 12.4016 61.1023 20.1026 56.3183C27.8036 51.5343 39.0719 55.7457 45.2711 65.7248Z" />
+              </g>
             </g>
-          </g>
-          <g class="eye-left">
-            <path class="eye-left-outer" d="M96.9,27h6.1c0-0.3,0-0.7,0-1c0-14.4-11.6-26-26-26C62.6,0,51,11.6,51,26 c0,0.3,0,0.7,0,1h11.1H96.9z"/>
-            <path class="eye-left-inner" d="M97,25c0-11-7.8-20-17.5-20S62,14,62,25c0,0.7,0,1.3,0.1,2h34.8C97,26.3,97,25.7,97,25z" />
-            <defs>
-              <clipPath id="eye-left-clip">
-                <path d="M96.9,27h6.1c0-0.3,0-0.7,0-1c0-14.4-11.6-26-26-26C62.6,0,51,11.6,51,26 c0,0.3,0,0.7,0,1h11.1H96.9z"/>
-            </defs>
-            <g clip-path="url(#eye-left-clip)">
-              <circle class="eye-left-pupil" cx="80" cy="17.7" r="5"/>
+          </svg>
+        </div>
+        <div class="cat__head">
+          <svg viewBox="0 0 1130 955" xmlns="http://www.w3.org/2000/svg">
+            <g class="head">
+              <path class="face" d="M321.49 310.462C215.087 384.989 163.896 612.685 151.5 624.5C139.103 636.315 165 802.5 232 880C299 957.5 741.5 998 807 880C872.5 762 937 706.5 922 624.5C907 542.5 778.094 360.45 690.286 300.464C602.477 240.479 427.893 235.934 321.49 310.462Z"/>
+              <path class="ear left-ear" d="M143 52.4208C84.9999 76.4208 221 444.421 221 444.421L400 274.421C400 274.421 201 28.4208 143 52.4208Z"/>
+              <path class="ear right-ear" d="M873 2.4208C796 -21.5792 615 266.421 615 266.421L820 438.421C820 438.421 950 26.4208 873 2.4208Z"/>
             </g>
+            <path class="mouth" d="M492 806.419C540.747 811.848 547.499 765 547.499 765C547.499 765 578.475 825.854 613 801.062"/>
+            <g class="eyes">
+              <g class="left-eye">
+                <path class="left-eye-outer" d="M286 540.421C282.408 466.421 447 424.421 468 512.421C489 600.421 289.592 614.421 286 540.421Z" />
+                <path class="left-eye-inner" d="M300 532.938C300 503.206 410.352 426.457 447.136 517.726C483.92 608.995 300 562.669 300 532.938Z" />
+                <circle class="left-eye-pupil pupil" cx="376" cy="520.421" r="35"/>
+              </g>
+              <g class="right-eye">
+                <path class="right-eye-outer" d="M552 514.421C552 451.421 794 377.421 786 522.421C778 667.421 552 577.421 552 514.421Z" />
+                <path class="right-eye-inner" d="M573.693 508.886C587.685 454.114 763.716 405.841 762.998 526.525C762.28 647.208 559.701 563.658 573.693 508.886Z" />
+                <circle class="right-eye-pupil pupil" cx="650" cy="514.421" r="35" />
+              </g>
+            </g>
+            <g class="whiskers">
+              <g class="left-whisker">
+                <path class="whisker left-top-whisker" d="M521 691.421C113 684.221 147 604.421 2 691.421" />
+                <path class="whisker left-middle-whisker" d="M518 692.421C518 692.421 138 669.421 12 724.421" />
+                <path class="whisker left-bottom-whisker" d="M517 695.421C517 695.421 56.9999 710.421 25.9999 756.421" />
+              </g>
+              <g class="right-whisker">
+                <path class="whisker right-top-whisker" d="M563 680.982C563 680.982 1080.72 584.47 1124.33 670.926" />
+                <path class="whisker right-middle-whisker" d="M564 685.421C564 685.421 1094 643.421 1106 685.421" />
+                <path class="whisker right-bottom-whisker" d="M566 693.421C566 693.421 1084 693.421 1088 729.421" />
+              </g>
+            </g>
+            <g class="nose">
+              <path class="nose-top" d="M461 678.421C461 678.421 493.4 630.987 533 652.879C572.6 674.772 587 601.797 605 678.421" />
+              <ellipse class="nostril left-nostril" cx="517.34" cy="698.058" rx="13.9056" ry="27.8112" transform="rotate(-22.2585 517.34 698.058)" />
+              <ellipse class="nostril right-nostril" cx="560.448" cy="697.394" rx="14.3667" ry="28.7333" transform="rotate(32.1309 560.448 697.394)" />
+            </g>
+          </svg>
+        </div>
+      </div>
+      <div class="bauble__container">
+        <svg class="bauble__svg" viewBox="0 0 458 458" xmlns="http://www.w3.org/2000/svg">
+          <circle class="bauble-background" cx="229" cy="229" r="228"/>
+          <g class="lines">
+            <line class="line line-1" x1="106" y1="35" x2="350" y2="35" />
+            <line class="line line-3" x1="106" y1="421" x2="350" y2="421" />
+            <line class="line line-2" x1="83" y1="54" x2="374" y2="54" />
+            <line class="line line-5" x1="31.9975" y1="116" x2="426.997" y2="115" />
+            <line class="line line-4" x1="138" y1="439" x2="316" y2="439" />
           </g>
-        </g>
-        <g class="nostrils">
-          <g class="nostril-right">
-            <ellipse class="nostril-right-outer" cx="130.5" cy="27.5" rx="6.5" ry="5.5"/>
-            <circle class="nostril-right-inner" cx="130" cy="28" r="4"/>
+          <g class="stars-top">
+            <path class="star star-1" d="M76 65L81.8374 82.9656H100.727L85.4451 94.0689L91.2824 112.034L76 100.931L60.7176 112.034L66.5549 94.0689L51.2725 82.9656H70.1626L76 65Z"/>
+            <path class="star star-2" d="M125 65L130.837 82.9656H149.727L134.445 94.0689L140.282 112.034L125 100.931L109.718 112.034L115.555 94.0689L100.273 82.9656H119.163L125 65Z"/>
+            <path class="star star-3" d="M177 65L182.837 82.9656H201.727L186.445 94.0689L192.282 112.034L177 100.931L161.718 112.034L167.555 94.0689L152.273 82.9656H171.163L177 65Z"/>
+            <path class="star star-4" d="M229 65L234.837 82.9656H253.727L238.445 94.0689L244.282 112.034L229 100.931L213.718 112.034L219.555 94.0689L204.273 82.9656H223.163L229 65Z"/>
+            <path class="star star-5" d="M278 65L283.837 82.9656H302.727L287.445 94.0689L293.282 112.034L278 100.931L262.718 112.034L268.555 94.0689L253.273 82.9656H272.163L278 65Z"/>
+            <path class="star star-6" d="M330 65L335.837 82.9656H354.727L339.445 94.0689L345.282 112.034L330 100.931L314.718 112.034L320.555 94.0689L305.273 82.9656H324.163L330 65Z"/>
+            <path class="star star-7" d="M379 65L384.837 82.9656H403.727L388.445 94.0689L394.282 112.034L379 100.931L363.718 112.034L369.555 94.0689L354.273 82.9656H373.163L379 65Z"/>
           </g>
-          <g class="nostril-left">
-            <ellipse class="nostril-left-outer" cx="106.5" cy="27.5" rx="6.5" ry="5.5"/>
-            <circle class="nostril-left-inner" cx="107" cy="28" r="4"/>
+          <g class="stars-bottom">
+            <path class="star star-17" d="M107 361L112.837 378.966H131.727L116.445 390.069L122.282 408.034L107 396.931L91.7176 408.034L97.5549 390.069L82.2725 378.966H101.163L107 361Z"/>
+            <path class="star star-18" d="M156 361L161.837 378.966H180.727L165.445 390.069L171.282 408.034L156 396.931L140.718 408.034L146.555 390.069L131.273 378.966H150.163L156 361Z"/>
+            <path class="star star-19" d="M208 361L213.837 378.966H232.727L217.445 390.069L223.282 408.034L208 396.931L192.718 408.034L198.555 390.069L183.273 378.966H202.163L208 361Z"/>
+            <path class="star star-20" d="M260 361L265.837 378.966H284.727L269.445 390.069L275.282 408.034L260 396.931L244.718 408.034L250.555 390.069L235.273 378.966H254.163L260 361Z"/>
+            <path class="star star-21" d="M309 361L314.837 378.966H333.727L318.445 390.069L324.282 408.034L309 396.931L293.718 408.034L299.555 390.069L284.273 378.966H303.163L309 361Z"/>
+            <path class="star star-22" d="M359.5 361L365.001 378.62L382.801 378.62L368.4 389.51L373.901 407.13L359.5 396.24L345.099 407.13L350.6 389.51L336.199 378.62L353.999 378.62L359.5 361Z"/>
           </g>
-        </g>
-        <path class="body" d="M218,98H24C10.8,98,0,87.2,0,74V51c0-13.2,10.8-24,24-24h194c13.2,0,24,10.8,24,24v23 C242,87.2,231.2,98,218,98z"/>
-        <g class="freckles">
-          <circle class="freckle" cx="13.7" cy="41.4" r="1.6"/>
-          <circle class="freckle" cx="20.1" cy="44.7" r="1.6"/>
-          <circle class="freckle" cx="19.6" cy="37.8" r="1.6"/>
-        </g>
-        <g class="mouth" clip-path="url(#mouthClip)">
-          <g class="mouth-pieces">
-            <path class="mouth-back" d="M23.6,168.2l-3-56.1c0-7.8,6.4-14.1,14.1-14.1h172.4c7.8,0,14.1,6.4,14.1,14.1l-3,56.1"/>
-            <path class="tongue" d="M174.9,168.2c-7.3-5-24.5-9.9-54.8-9.9s-48,5.1-54.8,9.9"/>
+          <g class="stars-middle">
+            <path class="star star-8" d="M19 223L23.2658 236.474H37.0701L25.9022 244.802L30.1679 258.276L19 249.948L7.83208 258.276L12.0978 244.802L0.929926 236.474H14.7342L19 223Z"/>
+            <path class="star star-9" d="M57.5 223L61.878 236.474H76.0456L64.5838 244.802L68.9618 258.276L57.5 249.948L46.0382 258.276L50.4162 244.802L38.9544 236.474H53.122L57.5 223Z"/>
+            <path class="star star-10" d="M96 223L100.266 236.474H114.07L102.902 244.802L107.168 258.276L96 249.948L84.8321 258.276L89.0978 244.802L77.9299 236.474H91.7342L96 223Z"/>
+            <path class="star star-11" d="M134 223L138.266 236.474H152.07L140.902 244.802L145.168 258.276L134 249.948L122.832 258.276L127.098 244.802L115.93 236.474H129.734L134 223Z"/>
+            <path class="star star-12" d="M172.5 223L176.878 236.474H191.046L179.584 244.802L183.962 258.276L172.5 249.948L161.038 258.276L165.416 244.802L153.954 236.474H168.122L172.5 223Z"/>
+            <path class="star star-13" d="M211 223L215.266 236.474H229.07L217.902 244.802L222.168 258.276L211 249.948L199.832 258.276L204.098 244.802L192.93 236.474H206.734L211 223Z"/>
+            <path class="star star-14" d="M249 223L253.266 236.474H267.07L255.902 244.802L260.168 258.276L249 249.948L237.832 258.276L242.098 244.802L230.93 236.474H244.734L249 223Z"/>
+            <path class="star star-15" d="M287.5 223L291.878 236.474H306.046L294.584 244.802L298.962 258.276L287.5 249.948L276.038 258.276L280.416 244.802L268.954 236.474H283.122L287.5 223Z"/>
+            <path class="star star-16" d="M326 223L330.266 236.474H344.07L332.902 244.802L337.168 258.276L326 249.948L314.832 258.276L319.098 244.802L307.93 236.474H321.734L326 223Z"/>
+            <path class="star star-24" d="M362 223L366.266 236.474H380.07L368.902 244.802L373.168 258.276L362 249.948L350.832 258.276L355.098 244.802L343.93 236.474H357.734L362 223Z"/>
+            <path class="star star-25" d="M400.5 223L404.878 236.474H419.046L407.584 244.802L411.962 258.276L400.5 249.948L389.038 258.276L393.416 244.802L381.954 236.474H396.122L400.5 223Z"/>
+            <path class="star star-26" d="M439 223L443.266 236.474H457.07L445.902 244.802L450.168 258.276L439 249.948L427.832 258.276L432.098 244.802L420.93 236.474H434.734L439 223Z"/>
           </g>
-        </g>
-        <g class="teeth">
-          <path class="tooth-left" d="M115,97.9v7.5c0,2-1.7,3.6-3.6,3.6H89.7c-2,0-3.6-1.7-3.6-3.6v-7.5H115z"/>
-          <path class="tooth-right" d="M154,97.9v7.5c0,2-1.7,3.6-3.6,3.6h-21.7c-2,0-3.6-1.7-3.6-3.6v-7.5H154z"/>
-        </g>
-        <defs>
-          <clipPath id="mouthClip">
-            <path d="M218,98H24C10.8,98,0,87.2,0,74V51c0-13.2,10.8-24,24-24h194c13.2,0,24,10.8,24,24v23 C242,87.2,231.2,98,218,98z"/>
-          </clipPath>
-        </defs>
-      </svg>
-    </button>
-
+          <g class="zigzag-top">
+            <path class="zigzag zigzag-1" d="M386.5 120H429C433 120 434.5 130.5 434.5 130.5L411.5 178L386.5 137L356.5 178L330 137L302 174L278 137L248 178L220 137L191 174L165 137L137 174L109.5 137L76.9999 174L45.4999 137C45.4999 137 1.41852 193.787 7.99997 174C13.1497 158.517 17.5487 140.12 28.4999 120H109.5H165H220H278H330H386.5Z"/>
+            <path class="zigzag zigzag-2" d="M46.1371 174L2 214.814C3.53489 214.814 33.9126 214.978 77.2892 215.217L78.6371 217L79.7689 215.23C96.086 215.32 114.16 215.42 133.177 215.525L134.137 217L135.023 215.535C152.252 215.63 170.227 215.73 188.348 215.83L189.137 217L189.92 215.839C208.891 215.944 228.002 216.05 246.566 216.153L247.137 217L247.607 216.159C265.38 216.257 282.638 216.353 298.774 216.442L299.137 217L299.478 216.446C320.522 216.563 339.636 216.668 355.466 216.755L355.637 217L355.778 216.757C382.901 216.906 400.308 217 401.137 217H457.5C457.5 217 455 200.314 454 197C453 193.686 443.5 178.814 443.5 178.814L417.5 204.814C417.5 204.814 405.137 217 401.137 217L380.637 174L355.778 216.757C355.675 216.756 355.571 216.756 355.466 216.755L325.637 174L299.478 216.446C299.244 216.445 299.009 216.444 298.774 216.442L271.137 174L247.607 216.159C247.26 216.157 246.913 216.155 246.566 216.153L218.137 174L189.92 215.839C189.396 215.836 188.872 215.833 188.348 215.83L160.137 174L135.023 215.535C134.406 215.532 133.791 215.528 133.177 215.525L106.137 174L79.7689 215.23C78.9377 215.226 78.1111 215.221 77.2892 215.217L46.1371 174Z"/>
+          </g>
+          <g class="zigzag-bottom">
+            <path class="zigzag zigzag-3" d="M383.5 360H415C419 360 427 343 427 343L408.5 302L383.5 343L353.5 302L327 343L299 306L275 343L245 302L217 343L188 306L162 343L134 306L106.5 343L73.9999 306L42.4999 343C42.4999 343 7.91855 286.213 14.5 306C19.6498 321.483 30.5 341 42.4999 360H106.5H162H217H275H327H383.5Z"/>
+            <path class="zigzag zigzag-4" d="M43.1371 306L4 264.5C5.4907 264.5 33.8332 264.394 74.7016 264.238L75.6371 263L76.4244 264.231C92.7946 264.169 111.109 264.098 130.47 264.024L131.137 263L131.753 264.019C149.092 263.952 167.251 263.883 185.589 263.812L186.137 263L186.682 263.808C205.761 263.734 225.021 263.66 243.741 263.588L244.137 263L244.464 263.585C262.312 263.516 279.661 263.45 295.885 263.387L296.137 263L296.375 263.385C317.467 263.304 336.642 263.23 352.519 263.17L352.637 263L352.735 263.169C379.86 263.065 397.302 263 398.137 263H454.5C454.5 263 451.5 276.686 450.5 280C449.5 283.314 444 303 444 303L414.5 275.186C414.5 275.186 402.137 263 398.137 263L377.637 306L352.735 263.169C352.663 263.169 352.591 263.17 352.519 263.17L322.637 306L296.375 263.385C296.211 263.386 296.048 263.386 295.885 263.387L268.137 306L244.464 263.585C244.223 263.586 243.982 263.587 243.741 263.588L215.137 306L186.682 263.808C186.318 263.809 185.954 263.811 185.589 263.812L157.137 306L131.753 264.019C131.325 264.021 130.897 264.022 130.47 264.024L103.137 306L76.4244 264.231C75.8477 264.233 75.2734 264.236 74.7016 264.238L43.1371 306Z"/>
+          </g>
+        </svg>
+      </div>
+  </div>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js"></script>
     <script src="./js/app.js"></script>
   </body>
